feat: develop react three fiber animation to homepage acreen component

--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -515,7 +515,8 @@
   .home-page .hero,
   .home-page .browse-specialization,
   .home-page .events,
-  .home-page .top-rated-doctors {
+  .home-page .top-rated-doctors,
+  .home-page .portal-showcase {
     background: #0f172a !important;
   }
 
